--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@
 .pauseBtn button{
 	width: 70px;
 	height: 70px;
-	background-image: url(../images/go.jpg);
+	background-image: url(../images/go.JPG);
 	margin-left: -35px;
 	margin-top: -35px;
 }
@@ -54,7 +54,7 @@
 }
 
 .snakeHead{
-	background-image: url(../images/snake.jpg);
+	background-image: url(../images/snake.JPG);
 	background-size: cover;
 }
 .snakeBody{
@@ -62,6 +62,6 @@
 	border-radius: 50%;
 }
 .food{
-	background-image: url(../images/food.jpg);
+	background-image: url(../images/food.JPG);
 	background-size: cover;
 }
